# AI-doctor

./: .env  .env.example  Dockerfile  README.md  README_UI.md  README_milvus.md  UI_README.md  main.py  main_ui.py  pyproject.toml  requirements.txt
src/crew/: __init__.py  doc_crew.py  main.py  main_ui.py
src/crew/chroma_db/: chroma.sqlite3
src/crew/config/: agents.yaml  tasks.yaml
src/crew/tools/: bytez.py  milvus.py  serper.py
